# otus

./: README.md  requirements.txt
dz/: README.md
homewor_03/: Dockerfile  app.py
homework_01/: README.md  main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml  requirements.txt
homework_03/blogproject/: app.py
homework_03/ping/: app.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py  requirements.txt
homework_05/templates/: base.html
homework_07/: db.sqlite3  requirements.txt
homework_07/homework_07/: settings.py  urls.py
homework_08/: db.sqlite3
homework_08/blog/: urls.py  views.py
homework_08/blog/templates/blog/: post_detail.html  post_list.html
homework_08/homework_07/: settings.py  urls.py
homework_09/: manage.py
homework_09/blog/: views.py
homework_09/blog/tests/: test_models.py  test_views.py
homework_09/cov-report/: d_0760c9322e323dc4_0001_initial_py.html  d_0760c9322e323dc4___init___py.html  d_31e9a368df351e79___init___py.html  d_31e9a368df351e79_rest_models_py.html  d_31e9a368df351e79_test_views_py.html  d_bfcdb6c04bd90bff___init___py.html  d_bfcdb6c04bd90bff_asgi_py.html  d_bfcdb6c04bd90bff_settings_py.html  d_bfcdb6c04bd90bff_urls_py.html  d_bfcdb6c04bd90bff_wsgi_py.html  d_db4652d27126adc6___init___py.html  d_db4652d27126adc6_admin_py.html  d_db4652d27126adc6_apps_py.html  d_db4652d27126adc6_models_py.html  d_db4652d27126adc6_views_py.html  index.html  manage_py.html  status.json
(+1 files in other folders)
