[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = "homework_03"
authors = ["sergey <serzh.nikonov.90@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
