[tool.poetry]
name = "blogprojekt"
version = "1.0.0"
description = "homework 03"
authors = ["sergey <serzh.nikonov.90@list.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
